syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "MyFirstGrpc.Client";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc SendRandomData (google.protobuf.Empty) returns (stream SendRandomDataReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message SendRandomDataReply {
  int32 data = 1;
}